--- a/src/pages/template.html
+++ b/src/pages/template.html
@@ -2,8 +2,8 @@
  * @创建者: yujinjin9@126.com
  * @创建时间: 2022-10-20 16:45:57
  * @最后修改作者: yujinjin9@126.com
- * @最后修改时间: 2022-10-24 10:19:25
- * @项目的路径: \360-manager-H5\src\pages\template.html
+ * @最后修改时间: 2023-01-09 09:44:36
+ * @项目的路径: \front-end-project-template\src\pages\template.html
  * @描述: HTML模板页
 -->
 <!DOCTYPE html>
@@ -14,9 +14,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="第三方兑换券" />
-    <meta name="description" content="第三方兑换券">
-    <title>第三方兑换券</title>
+    <meta name="keywords" content="{{projectName}}" />
+    <meta name="description" content="{{projectName}}">
+    <title>{{projectName}}</title>
 </head>
 
 <body>
