重构组件内容，优化组件样式

--- a/src/pages/template.html
+++ b/src/pages/template.html
@@ -1,9 +1,6 @@
 <!--
  * @创建者: yujinjin9@126.com
  * @创建时间: 2022-10-20 16:45:57
- * @最后修改作者: yujinjin9@126.com
- * @最后修改时间: 2023-01-09 09:44:36
- * @项目的路径: \front-end-project-template\src\pages\template.html
  * @描述: HTML模板页
 -->
 <!DOCTYPE html>
@@ -14,9 +11,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="{{projectName}}" />
-    <meta name="description" content="{{projectName}}">
-    <title>{{projectName}}</title>
+    <meta name="keywords" content="qifu-cms-vuecli" />
+    <meta name="description" content="qifu公司定制化、无菜单、多页，基于vue-cli5 + vue3 + pinia + element-plus + vue-router + sass">
+    <title>内容管理系统</title>
 </head>
 
 <body>
