--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,13 +11,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="qifu-cms-vuecli" />
-    <meta name="description" content="qifu公司定制化、无菜单、多页，基于vue-cli5 + vue3 + pinia + element-plus + vue-router + sass">
+    <meta name="keywords" content="qifu-cms-vite" />
+    <meta name="description" content="qifu公司定制化、无菜单、多页，基于vite + vue3 + pinia + element-plus + vue-router + sass">
     <title>内容管理系统</title>
 </head>
 
 <body>
     <div id="app"></div>
+    <script type="module" src="/main.js"></script>
 </body>
 
 </html>
